# myproject

./: .env  .gitignore  01_파이썬_기초_문법(변수,자료형)_blank.ipynb  02_파이썬_기초_문법(제어문)_blank.ipynb  03_파이썬_기초_문법(함수)_blank.ipynb  04_넘파이.ipynb  04_넘파이_blank.ipynb  04_실습.ipynb  04_판다스_blank.ipynb  05_시각화.ipynb  06_데이터분석_따릉이.ipynb  06_데이터분석_따릉이_복습.ipynb  07_자연어_처리.ipynb  08_OPENAPI.ipynb  09_Beautifulsoup.ipynb  10_Selenium.ipynb  11_머신러닝_미리보기.ipynb  pyproject.toml  test.ipynb  wikidocs_blank.ipynb  데이터 분석 정리.md  데이터 분석 정리_백승주.md
Photo_num/: myD.txt
data/: 2. 2024 언론수용자 조사_최종데이터.csv  appreply.csv  customer_example.csv  mytext.txt  review_data.csv  reviews.txt
언론수용자_조사분석/: 250721_언론수용자_조사분석.ipynb  250722_언론수용자_조사분석.ipynb
