[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "folium>=0.20.0",
    "jpype1>=1.6.0",
    "jupyter>=1.1.1",
    "kiwipiepy>=0.21.0",
    "konlpy>=0.6.0",
    "koreanize-matplotlib>=0.1.1",
    "matplotlib>=3.10.3",
    "mlxtend>=0.23.4",
    "networkx>=3.4.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pyreadstat>=1.3.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "threadpoolctl>=3.6.0",
    "wordcloud>=1.9.4",
]
